--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   json_annotation: ^4.8.1
   dartz: ^0.10.1
   equatable: ^2.0.5
+  get_it: ^7.6.4
+
+  cloud_firestore: ^4.14.0
 
 
   # The following adds the Cupertino Icons font to your application.
