--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.5
   get_it: ^7.6.4
+  flutter_bloc: ^8.1.3
 
   cloud_firestore: ^4.14.0
+
+  oktoast: ^3.4.0
+  go_router: ^13.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
